--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hoge",
+  "name": "electron-react-app",
   "version": "0.1.0",
   "homepage": "./",
   "main": "src/electron-starter.js",
@@ -16,11 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "electron": "node_modules/.bin/electron .",
+    "electron": "electron .",
     "dev": "nf start -p 3000",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "package": "electron-packager . hoge --platform=linux --arch=armv7l --overwrite --prune=true --out=release"
+    "package": "electron-packager . electron-react-app --platform=linux --arch=armv7l --overwrite --prune=true --out=release"
   }
 }
